environments/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  labels:
    app: go-api
spec:
  selector:
    app: go-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
