environments/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plan-service
spec:
  selector:
    app: plan-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
