environments/base/api-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-api-route
  labels:
    app: go-api
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: simons-gateway
      namespace: envoy
  hostnames:
    - "plan.simonbrundin.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      backendRefs:
        - kind: Service
          name: go-api-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /swagger
      backendRefs:
        - kind: Service
          name: go-api-service
          port: 8080
