environments/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plan-route
  namespace: plan
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: simons-gateway
      namespace: envoy
  hostnames:
    - "plan.simonbrundin.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plan-service
          port: 80
          weight: 1
          namespace: plan
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30s
